修改xmemcache的默认压缩序列化数据的阀值，可配置